Update trip service