@@ -9,13 +9,12 @@ import org.cat.fish.tripservice.model.entity.Trip;
 import org.cat.fish.tripservice.repository.TripRepository;
 import org.cat.fish.tripservice.service.TripService;
 import org.springframework.beans.BeanUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import reactor.core.publisher.Flux;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Transactional
@@ -23,43 +22,40 @@ import java.util.List;
 @Service
 public class TripServiceImpl implements TripService {
 
-    @Autowired
-    private TripRepository tripRepository;
+    private final TripRepository tripRepository;
 
     @Override
-    public Flux<List<TripDto>> findAll() {
-        log.info("ProductDto List, service, fetch all trips");
-        return Flux.defer(() -> {
-                    List<TripDto> routeDto = tripRepository.findAll()
-                            .stream()
-                            .map(TripMappingHelper::mapToDto)
-                            .distinct()
-                            .toList();
-                    return Flux.just(routeDto);
-                })
-                .onErrorResume(throwable -> {
-                    log.error("Error while fetching trips: " + throwable.getMessage());
-                    return Flux.empty();
-                });
+    public List<TripDto> findAll() {
+        log.info("TripDto List, service, fetch all trips");
+        try {
+            return tripRepository.findAll().stream()
+                    .map(TripMappingHelper::mapToDto)
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            log.error("Error while fetching trips: {}", e.getMessage());
+            throw new RuntimeException("Error fetching trips", e);
+        }
     }
 
     @Override
     public TripDto findById(Long id) {
         log.info("TripDto, service; fetch trip by id: {}", id);
-        return tripRepository.findById(id)
-                .map(TripMappingHelper::mapToDto)
+        Trip trip = tripRepository.findById(id)
                 .orElseThrow(() -> new TripNotFoundException(String.format("Trip with id %s not found", id)));
+        return TripMappingHelper.mapToDto(trip);
     }
 
     @Override
     public TripDto save(TripDto tripDto) {
         log.info("TripDto, save trip: {}", tripDto);
         try {
-            return TripMappingHelper.mapToDto(tripRepository.save(TripMappingHelper.mapToTrip(tripDto)));
+            Trip trip = TripMappingHelper.mapToTrip(tripDto);
+            Trip savedTrip = tripRepository.save(trip);
+            return TripMappingHelper.mapToDto(savedTrip);
         } catch (DataIntegrityViolationException e) {
             throw new TripNotFoundException("Error saving trip: Data integrity violation", e);
         } catch (Exception e) {
-            throw new TripNotFoundException("Error saving trip: ", e);
+            throw new TripNotFoundException("Error saving trip: " + e.getMessage(), e);
         }
     }
 
@@ -67,29 +63,28 @@ public class TripServiceImpl implements TripService {
     public TripDto update(TripDto tripDto) {
         log.info("TripDto, service; update trip");
         Trip existingTrip = tripRepository.findById(tripDto.getTripId())
-                .orElseThrow(() -> new TripNotFoundException("Trip not found with id: " + tripDto.getVesselId()));
+                .orElseThrow(() -> new TripNotFoundException("Trip not found with id: " + tripDto.getTripId()));
 
         BeanUtils.copyProperties(tripDto, existingTrip, "tripId");
-
         Trip updatedTrip = tripRepository.save(existingTrip);
-
         return TripMappingHelper.mapToDto(updatedTrip);
     }
+
     @Override
     public TripDto update(Long id, TripDto tripDto) {
         Trip existingTrip = tripRepository.findById(id)
                 .orElseThrow(() -> new TripNotFoundException(String.format("Trip with id %s not found", id)));
 
         BeanUtils.copyProperties(tripDto, existingTrip);
-
         Trip updatedTrip = tripRepository.save(existingTrip);
-
         return TripMappingHelper.mapToDto(updatedTrip);
     }
 
     @Override
     public void deleteById(final Long id) {
         log.info("TripDto, service; delete trip with tripId");
-        this.tripRepository.deleteById(id);
+        Trip trip = tripRepository.findById(id)
+                .orElseThrow(() -> new TripNotFoundException("Trip not found with id: " + id));
+        tripRepository.delete(trip);
     }
 }
